--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4 # Updated to v4
+        uses: actions/checkout@v4
+
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git cmake python3-dev python3-pip
+          pip3 install west
 
       - name: Setup ZMK
         run: |
@@ -31,7 +37,7 @@ jobs:
           mv build/zephyr/zmk.uf2 $GITHUB_WORKSPACE/ckv1_right.uf2
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v4 # Updated to v4
+        uses: actions/upload-artifact@v4
         with:
           name: firmware
           path: |
