--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,45 +1,5 @@
-name: Build Firmware
-
-on:
-  push:
-    branches: [ main ]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y git cmake python3-dev python3-pip
-          pip3 install west
-
-      - name: Setup ZMK
-        run: |
-          git clone https://github.com/zmkfirmware/zmk.git
-          cd zmk
-          west init -l app/
-          west update
-
-      - name: Build Left
-        run: |
-          cd zmk
-          west build -s app -b nice_nano_v2 -- -DSHIELD=ckv1_left -DZMK_CONFIG="$GITHUB_WORKSPACE/config/ckv1"
-          mv build/zephyr/zmk.uf2 $GITHUB_WORKSPACE/ckv1_left.uf2
-
-      - name: Build Right
-        run: |
-          cd zmk
-          west build -s app -b nice_nano_v2 -- -DSHIELD=ckv1_right -DZMK_CONFIG="$GITHUB_WORKSPACE/config/ckv1"
-          mv build/zephyr/zmk.uf2 $GITHUB_WORKSPACE/ckv1_right.uf2
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: firmware
-          path: |
-            ckv1_left.uf2
-            ckv1_right.uf2
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
