--- a/config/boards/shields/ckv1/ckv1.conf
+++ b/config/boards/shields/ckv1/ckv1.conf
@@ -12,3 +12,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=90000000 // 1500 minutes
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_KEYBOARD_NAME="Ckv1"
