--- a/config/boards/shields/ckv1/ckv1.dtsi
+++ b/config/boards/shields/ckv1/ckv1.dtsi
@@ -1,33 +1,39 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 
 / {
-    chosen {
-        zmk,kscan = &kscan0;
-        zmk,matrix_transform = &default_transform;
-    };
+  chosen {
+    zmk,kscan = &kscan0;
+    zmk,matrix_transform = &default_transform;
+  };
 
-    default_transform: keymap_transform_0 {
-        compatible = "zmk,matrix-transform";
-        columns = <6>;  // Adjust to your matrix
-        rows = <5>;     // 4 main rows + 1 thumb row
-        map = <
-            // Left half
-            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
-            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)
-            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)
-            RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)
-            RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5)
-        >;
-    };
+  default_transform: keymap_transform_0 {
+    compatible = "zmk,matrix-transform";
+    columns = <6>;
+-   rows = <5>;
++   rows = <8>; // Match the 8 row-gpios defined below
+    map = <
+      // Left half (rows 0-4, columns 0-5)
+      RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
+      RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)
+      RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)
+      RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)
+      RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5)
+      // Thumb cluster rows (rows 5-7)
+      RC(5,0) RC(5,1) RC(5,2) RC(5,3) RC(5,4) RC(5,5)
+      RC(6,0) RC(6,1) RC(6,2) RC(6,3) RC(6,4) RC(6,5)
+      RC(7,0) RC(7,1) RC(7,2) RC(7,3) RC(7,4) RC(7,5)
+    >;
+  };
 
-    kscan0: kscan {
-        compatible = "zmk,kscan-gpio-matrix";
-        diode-direction = "col2row";
-        wakeup-source;
-        
-        // Common rows (both halves)
-        row-gpios 
-          = <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>  // Outer (P0.11)
+  kscan0: kscan {
+    compatible = "zmk,kscan-gpio-matrix";
+    diode-direction = "col2row";
+    wakeup-source;
+
+    // Pro Micro GPIO Pins (Arduino labels → GPIO numbers)
+    // Example: Pro Micro D0 → GPIO 10 (nRF52840)
+    row-gpios = 
+            <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>  // Outer (P0.11)
           , <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>   // Pinky (P1.00)
           , <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>  // Ring (P0.24)
           , <&pro_micro 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>  // Middle (P0.22)
