--- a/config/boards/shields/ckv1/ckv1.dtsi
+++ b/config/boards/shields/ckv1/ckv1.dtsi
@@ -1,5 +1,5 @@
 #include <dt-bindings/zmk/matrix_transform.h>
-include <dt-bindings/zmk/ext_power.h>
+#include <dt-bindings/zmk/ext_power.h>
 
 / {
   behaviors {
