--- a/config/boards/shields/ckv1/ckv1.dtsi
+++ b/config/boards/shields/ckv1/ckv1.dtsi
@@ -2,6 +2,22 @@
 #include <dt-bindings/zmk/ext_power.h>
 
 / {
+  behaviors {
+    hp_pwr: hold_pwr {
+      compatible = "zmk,behavior-hold-tap";
+      label = "HOLD_PWR";
+      #binding-cells = <2>;
+      tapping-term-ms = <1000>;
+      quick-tap-ms = <0>;
+    };
+    hp_rst: hold_rst {
+      compatible = "zmk,behavior-hold-tap";
+      label = "HOLD_RST";
+      #binding-cells = <2>;
+      tapping-term-ms = <1000>;
+      quick-tap-ms = <0>;
+    };
+  };
   chosen {
     zmk,kscan = &kscan0;
     zmk,matrix_transform = &default_transform;
